--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,139 +1,129 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}{{ title }}{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-        {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body class="{{ class }}">
+<html lang="ru">
 
-        <div id="header">
-                    <div class="container">
-                        <div id="logo">
-                            <a href="/"><img src="{{ asset('img/blog_logo.png') }}" alt=""></a>
-                        </div>
-                        <div id="main-menu">
-                            <ul id="top-menu">
-                                <li><a href="/">Home</a></li>
-                                <li><a href="/{{ path('blog', { "number" : 1}, true) }}">Blog</a></li>
-                                <li><a href="/">About</a></li>
-                                <li><a href="/">Contact</a></li>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description"
+          content="{% block meta_description %}Esthetic Journal - Головна Сторінка{% endblock meta_description %}">
+    <style type="text/css">@-ms-viewport {
+            width: device-width;
+        }</style>
+    <title>{% block page_title %}Esthetic Journal - Головна Сторінка{% endblock page_title %}</title>
+
+    {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/layers.min.css') }}" media="screen">
+        <link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}" media="screen">
+        <link rel="stylesheet" href="{{ asset('css/style-frontend.css') }}" media="screen">
+        <link href='http://fonts.googleapis.com/css?family=Proxi:400,700|Open+Sans:400italic,700italic,400,700'
+              rel='stylesheet' type='text/css'>
+    {% endblock stylesheets %}
+</head>
+
+<body class="{% block body_classes %}{% endblock %}">
+{% block header %}
+    <header role="banner" class="transparent light">
+        <div class="row">
+            <div class="nav-inner row-content buffer-left buffer-right even clear-after">
+                <div id="brand">
+                    <h1 class="reset">
+                        <a href="{{ path('homepage') }}">Esthetic Journal</a>
+                    </h1>
+                </div><!-- brand -->
+                <a id="menu-toggle" href="#"><i class="fa fa-bars fa-lg"></i></a>
+                <nav>
+                    <ul class="reset" role="navigation">
+                        <li class="menu-item">
+                            <a href="{{ path('homepage') }}">Головна</a>
+                            <ul class="sub-menu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
                             </ul>
-                        </div>
+                        </li>
+                        <li class="menu-item">
+                            <a href="{{ path('blog', {"number" : 1}) }}">Новини</a>
+                            <ul class="sub-menu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li><a href="#">6</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">Відео</a>
+                            <ul class="sub-menu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu-item"><a href="#">Про нас</a></li>
+                        <li class="menu-item"><a href="#">Пошук</a></li>
+                        <li class="menu-item"><a href="#">Контакти</a></li>
+                    </ul>
+                </nav>
+            </div><!-- row-content -->
+        </div><!-- row -->
+    </header>
+{% endblock header %}
+
+{% block content %}{% endblock content %}
+
+{% block footer %}
+    <footer role="contentinfo">
+        <div class="row">
+            <div class="row-content buffer clear-after">
+                <section id="top-footer">
+                    <div class="widget column three"><!-- widget-->
+                        <h4>Меню</h4>
+                        <ul class="plain">
+                            <li><a href="#">Головна</a></li>
+                            <li><a href="#">Новини</a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#">Контакти</a></li>
+                        </ul>
                     </div>
-                </div>
-
-        {% block slider %}{% endblock %}
-
-        {% block header_image %}{% endblock %}
-
-        <div id="content">
-                <div class="container">
-                    {% block content %}{% endblock content %}
-                    {% block sidebar %}{% endblock sidebar %}
-                </div>
-            </div>
-
-        <div id="footer">
-                    <div class="container">
-                        <div class="footer-cols">
-                            <div class="col col-lg-3">
-                                <div class="content">
-                                    <p><img src="{{ asset('img/crystal-white.png') }}" alt="" style="margin-bottom: 20px"></p>
-
-                                    <p>Crystal is a personal blog and magazine WordPress theme that lets you present your thoughts
-                                        and information in an elegant way.</p>
-
-                                    <p>Start Building your website in few minutes and get the support of retina, responsive, rtl and
-                                        WPML and much more at your finger tip.</p>
-                                </div>
-                            </div>
-
-                            <div class="col col-lg-3">
-                                <div class="content">
-                                    <h3 class="title">Recent Posts</h3>
-                                    <ul>
-                                        <li>
-                                            <a href="/">Fly Directly Into a Fireworks Display With This Drone Footage</a>
-                                            <span class="post-date">November 1, 2014</span>
-                                        </li>
-                                        <li>
-                                            <a href="/">How the Internet is Democratizing Luxury</a>
-                                            <span class="post-date">September 22, 2014</span>
-                                        </li>
-                                        <li>
-                                            <a href="/">10 Frozen Cocktails for a Buzzy Fourth of July</a>
-                                            <span class="post-date">September 20, 2014</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="col col-lg-3">
-                                <div class="content">
-                                    <h3 class="title">Recent Posts</h3>
-                                    <ul>
-                                        <li>
-                                            <a href="/">Fly Directly Into a Fireworks Display With This Drone Footage</a>
-                                            <span class="post-date">November 1, 2014</span>
-                                        </li>
-                                        <li>
-                                            <a href="/">How the Internet is Democratizing Luxury</a>
-                                            <span class="post-date">September 22, 2014</span>
-                                        </li>
-                                        <li>
-                                            <a href="/">10 Frozen Cocktails for a Buzzy Fourth of July</a>
-                                            <span class="post-date">September 20, 2014</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="col col-lg-3">
-                                <div class="content">
-                                    <p><img src="{{ asset('img/crystal-white.png') }}" alt=""></p>
-
-                                    <p>Crystal is a personal blog and magazine WordPress theme that lets you present your thoughts
-                                        and information in an elegant way.</p>
-
-                                    <p>Start Building your website in few minutes and get the support of retina, responsive, rtl and
-                                        WPML and much more at your finger tip.</p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="widget column three">
+                        <h4>Архіви</h4>
+                        <ul class="plain">
+                            <li><a href="#">2016</a></li>
+                            <li><a href="#">2016</a></li>
+                            <li><a href="#">2016</a></li>
+                            <li><a href="#">2016</a></li>
+                            <li><a href="#">2016</a></li>
+                        </ul>
                     </div>
-                </div>
-
-        <div id="footer-bottom">
-                    <div class="container">
-                        <div class="col col-lg-6">
-                            <div class="copyright">Copyright ©2016. Designed by
-                                <a href="/">Roma Paliy</a>
-                            </div>
-                        </div>
-                        <div class="col col-lg-6">
-                            <div class="social_icons">
-                                <div class="single_social_icon"><a class=" fa fa-facebook" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-twitter" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-google-plus" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-linkedin" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-instagram" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-dribbble" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-behance" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-youtube" href="#" target="_blank"></a></div>
-                                <div class="single_social_icon"><a class=" fa fa-vimeo-square" href="#" target="_blank"></a></div>
-                            </div>
-                        </div>
+                    <div class="widget meta-social column three">
+                        <h4>Слідкуйте за нами</h4>
+                        <ul class="inline">
+                            <li><a href="#" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a>
+                            </li>
+                            <li><a href="#" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a>
+                            </li>
+                            <li><a href="#" class="vk-share border-box"><i class="fa fa-vk fa-lg"></i></a></li>
+                        </ul>
                     </div>
-                </div>
+                </section><!-- top-footer -->
+                <section id="bottom-footer">
+                    <p class="keep-left">&copy; 2016 <a href="http://vk.com/awaylastdays" alt="AwayLastDays">AwayLastDays</a>.
+                        All Rights Reserved.</p>
+                </section><!-- bottom-footer -->
+            </div><!-- row-content -->
+        </div><!-- row -->
+    </footer>
+{% endblock footer %}
 
-        {% block javascripts %}
-            <script src="{{ asset('js/main.min.js') }}"></script>
-            <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        {% endblock %}
-    </body>
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="{{ asset('js/plugins.js') }}"></script>
+    <script src="{{ asset('js/alpha.js') }}"></script>
+{% endblock javascripts %}
+
+</body>
 </html>
