--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,7 +6,7 @@
             <div id="intro" class="preload darken" data-autoplay="5000" data-navigation="true" data-pagination="true"
                  data-transition="fadeUp">
                 {% for slide in slides %}
-                    <div class="intro-item" style="background-image: url({{ slide.image.path }});">
+                    <div class="intro-item" style="background-image: url({{ slide.image }});">
                         <div class="caption">
                             <h2>{{ slide.title }}</h2>
                             <p>{{ slide.description | raw }}</p>
@@ -30,7 +30,7 @@
                             <article
                                     class="item column {% if loop.index == 1 or loop.index == 4 or loop.index == 9 %} six {% else %} three {% endif %}">
                                 <a href="{{ path('article', {"slug" : article.slug}) }}">
-                                    <figure style="background-image: url({{ article.image.path }})">
+                                    <figure style="background-image: url({{ article.image }})">
                                         <span class="blog-overlay">
                                             <i class="icon icon-doc"></i>
                                         </span>
@@ -39,7 +39,7 @@
                                         <div class="blog-excerpt-inner">
                                             <h5 class="meta-post">{{ article.categories.name }}</h5>
                                             <h2>{{ article.title }}</h2>
-                                            <p></p>
+                                            <p>{{ article.description | striptags }}</p>
                                         </div><!-- blog-excerpt-inner -->
                                     </div><!-- blog-excerpt -->
                                 </a>
