--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -66,6 +66,9 @@
 
         {% block javascript %}
             <script src="{{ asset('js/main.min.js') }}"></script>
+            <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+            <script src="{{ asset('js/admin.js') }}"></script>
         {% endblock %}
 </body>
 </html>
