--- a/app/Resources/views/article/blog.html.twig
+++ b/app/Resources/views/article/blog.html.twig
@@ -35,7 +35,7 @@
                         <article
                                 class="item column {% if loop.index == 1 or loop.index == 4 or loop.index == 9 %} six {% else %} three {% endif %}">
                             <a href="{{ path('article', {"slug" : article.slug}) }}">
-                                <figure style="background-image: url({{ article.image.path }})">
+                                <figure style="background-image: url({{ article.image }})">
                                         <span class="blog-overlay">
                                             <i class="icon icon-doc"></i>
                                         </span>
