--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -39,7 +39,7 @@
                                         <div class="blog-excerpt-inner">
                                             <h5 class="meta-post">{{ article.categories.name }}</h5>
                                             <h2>{{ article.title }}</h2>
-                                            <p>{{ article.description | striptags }}</p>
+                                            {#<p>{{ article.description | striptags }}</p>#}
                                         </div><!-- blog-excerpt-inner -->
                                     </div><!-- blog-excerpt -->
                                 </a>
