--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -2,26 +2,26 @@
 
 {% block content %}
 
-    <h1>Login</h1>
+    <h1 class="login-title">Вхід</h1>
 
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login_check') }}" method="post">
-        <label for="username">Username:</label>
+    <form action="{{ path('login_check') }}" method="post" id="login-form">
+        <label for="username">Логін:</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" />
 
-        <label for="password">Password:</label>
+        <label for="password">Пароль:</label>
         <input type="password" id="password" name="_password" class="form-control" />
 
-        <button type="submit" class="btn btn-default">login</button>
+        <input type="submit" class="btn btn-default" value="Вхід">
     </form>
 
-    <a href="http://journal.com/app_dev.php/connect/facebook">facebook</a>
-    <br>
-    <a href="http://journal.com/app_dev.php/connect/google">google</a>
-    <br>
-    <a href="http://journal.com/app_dev.php/connect/vkontakte">vkontakte</a>
+    {#<a href="http://journal.com/app_dev.php/connect/facebook">facebook</a>#}
+    {#<br>#}
+    {#<a href="http://journal.com/app_dev.php/connect/google">google</a>#}
+    {#<br>#}
+    {#<a href="http://journal.com/app_dev.php/connect/vkontakte">vkontakte</a>#}
 
 {% endblock content %}
