--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -51,6 +51,11 @@
                             <li><a href="{{ path('admin_categories') }}">Всі категорії</a></li>
                         </ul>
                     </li>
+                    <li><a href="#">Меню</a>
+                        <ul class="sub-menu">
+                            <li><a href="{{ path('admin_menu') }}">Редагувати</a>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
